--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://github.com/Goofberg/discord-bober/raw/refs/heads/main/media/jschlat.mp4">
+    <meta property="og:image" content="https://github.com/Goofberg/discord-bober/raw/refs/heads/main/media/jschlat.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
