--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://github.com/Goofberg/discord-bober/raw/refs/heads/main/media/jschlat.gif">
-    <meta property="og:type" content="video.other">
+    <meta property="og:image" content="https://github.com/Goofberg/discord-bober/raw/refs/heads/main/media/thmb.jpg">
     
     <!-- Video Link -->
     <meta property="og:video:url" content="https://github.com/Goofberg/discord-bober/raw/refs/heads/main/media/meme.mp4">
