--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <!-- Thumbnail image/gif -->
     <meta property="og:image" content="https://raw.githubusercontent.com/goofberg/discord-bober/main/media/jschlat.mp4">
+    <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
     <meta property="og:video:url" content="https://raw.githubusercontent.com/goofberg/discord-bober/main/media/meme.mp4">
