--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image:url" content="https://raw.githubusercontent.com/goofberg/blamer/main/media/thmb.jpg">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/goofberg/blamer/main/media/thmb.jpg">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/goofberg/blamer/main/media/meme.mp4">
+    <meta property="og:image:url" content="https://raw.githubusercontent.com/goofberg/blamer/main/media/meme.mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     
