--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Thumbnail image/gif -->
     
     <!-- Video Link -->
-    <meta property="og:image:url" content="https://raw.githubusercontent.com/goofberg/blamer/main/media/meme.mp4">
+    <meta property="og:image:url" content="http://45.90.12.30:6589/files/nice.mp4">
   </head>
   <body>
   </body>
